# jasmin-res-hq

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: handoff.md  pickup.md
20251231-hw-er-pilot/: README.md
20251231-hw-er-pilot/data/: cities.csv
20251231-hw-er-pilot/scripts/: extract_era5_batch.py  extract_era5_cities.py
data/: catalogue.yaml
docs/: ceda-data-availability.md  jasmin-setup.md
handoff/: 2025-12-31-jasmin.md  2025-12-31-local-v2.md  2025-12-31-local.md  2026-01-01-jasmin.md
